--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Image Editor</title>
+		<meta charset="utf-8">
+		<title>Image Editor | Vikas Lalwani</title>
 		<link href = "css/main.css" type="text/css" rel="stylesheet">
 	</head>
 
@@ -76,6 +77,8 @@
 
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
+		
+		<!-- Google Analytics Tracking Code -->
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
